--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ header, main, footer{
   margin-bottom: 12px;
 }
 
+h1{
+  margin-bottom: 5px;
+}
 
 h3, h4,h6{
   color: #7C7C7C;
@@ -30,7 +33,7 @@ h3, h4,h6{
 }
 
 table{
-  
+  border-spacing: 0;
   margin-right: 10px;
 }
 #tr-head{
@@ -44,7 +47,8 @@ th, td {
 }
 
 footer h3{
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  margin-top: 40px;
 }
 
 .tr-colored{
@@ -67,7 +71,7 @@ footer h3{
   text-decoration: none;
 }
 
-#evidenziato{
+.evidenziato{
   background-color: #FFFF00;
 }
 
