--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   
 }
 body{
-  border: 1px solid aqua ;
+  border: 1px solid #4EA0FF ;
 }
 
 th, td{
@@ -26,20 +26,13 @@ h3, h4,h6{
   margin: 0 0 0 0;
   
 }
-.topbanner{
-  background-color: #14A4E3;
-  background-image: url("../img/pattern.png");
-  height: 185px;
-}
+
 
 table{
   border-spacing: 0;
   margin-right: 10px;
 }
-#tr-head{
-  background-color: #20A9E5;
-  
-}
+
 
 th, td {
   min-width: 200px;
@@ -49,30 +42,6 @@ th, td {
 footer h3{
   margin-bottom: 15px;
   margin-top: 40px;
-}
-
-.tr-colored{
-  background-color: #B1E5F2;
-}
-
-.didascalia-img{
-  font-size: 10px;
-  margin: 0 0 0 0;
-}
-
-#the-booleaner-logo{
-  height: 82px;
-  width:  383px;
-  margin-top: 80px;
-  margin-left: 10px;
-}
-#the-booleaner{
-  color: #14A4E3;
-  text-decoration: none;
-}
-
-.evidenziato{
-  background-color: #FFFF00;
 }
 
 footer a{
@@ -87,6 +56,41 @@ footer a{
   padding-left: 20px;
   padding-top: 20px;
 }
+
+.topbanner{
+  background-color: #4EA0FF;
+  background-image: url("../img/pattern.png");
+  height: 185px;
+}
+
+.tr-colored{
+  background-color: #B1E5F2;
+}
+
+.didascalia-img{
+  font-size: 10px;
+  margin: 0 0 0 0;
+}
+
+.evidenziato{
+  background-color: #FFFF00;
+}
+
+#tr-head{
+  background-color: #20A9E5; 
+}
+
+#the-booleaner-logo{
+  height: 82px;
+  width:  383px;
+  margin-top: 80px;
+  margin-left: 10px;
+}
+#the-booleaner{
+  color: #14A4E3;
+  text-decoration: none;
+}
+
 #a-footer-1{
   background-image: url(../img/monitor.jpg);
 }
@@ -94,3 +98,7 @@ footer a{
 #a-footer-2{
   background-image: url(../img/graph.jpg);  
 }
+
+
+
+
