--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,11 @@ h1{
 
 h3, h4,h6{
   color: #7C7C7C;
-  margin: 0 0 0 0;
-  
+  margin: 0 0 0 0;  
 }
 
-
 table{
+  /*border-collapse: collapse;*/
   border-spacing: 0;
   margin-right: 10px;
 }
@@ -61,7 +60,8 @@ footer h3{
 footer a{
   text-decoration: none;
   background-repeat: no-repeat;  
-  display: inline-block;
+  display: block; 
+  
   width: 300px;
   height: 220px;
   color: white;
