--- a/css/style.css
+++ b/css/style.css
@@ -17,18 +17,28 @@ nav img{
   height: 82px;
   width:  383px;
   margin-top: 80px;
-  margin-left: 10px;
+  margin-left: -35px;
+  
 }
 
 th, td{
   text-align:left;
 }
 
-header, main, footer{
-  margin-left: 200px;
-  margin-right:200px;
+/* header, main, footer{
+  margin-left: 20px;
+  margin-right:20px;
   margin-top: 15px;
   margin-bottom: 12px;
+} */
+
+header, main, footer, #nav-inner{
+  /* padding-left: 200px;
+  padding-right: 200px; */
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto; 
+  
 }
 
 h1{
